===================================
gnome-commander 1.4
---------------

Bug fixes:
 * Fixed problem #617140 (GNOME Goal: Use accessor functions instead direct access)
 * Fixed Ubuntu problem #117226 (bookmarks unification)
 * Fixed problem with right mouse button selection not being precise

New features:
 * Support for tabs
 * Revamped bookmarks dialog
 * Revamped file properties dialog
 * One instance mode
 * User defined LS_COLORS colours
 * Enhanced file name matching in quick search
 * New or updated docs: de, en, es, fr, sl
 * New or updated translations: da, es, eu, fr, hu, pl, ro, ru, sl, uk, zh_CN
 * New key bindings:
      CTRL+T         Open directory in a new tab (replaces the old Multi-Rename-Tool binding)
      CTRL+W         Close current tab
      CTRL+SHIFT+W   Close all tabs
      CTRL+TAB       Switch to the next tab
      CTRL+SHIFT+TAB Switch to the previous tab
      SUPER+1        Change left connection
      SUPER+2        Change right connection


===================================
gnome-commander 1.2.8.9
---------------

Bug fixes:
 * Fixed problem #631243 (advrename $c(width) regression)

New features:
 * Support for shell-style wildcards in quick search


===================================
gnome-commander 1.2.8.8
---------------

Bug fixes:
 * Fixed problem #610764 (menu item won't stay checked)
 * Fixed problem #626469 (add support for other su-like programs: xdg-su, gnomesu)
 * Fixed problem with broken Spanish translation


===================================
gnome-commander 1.2.8.7
---------------

Bug fixes:
 * Fixed problem #540438 (no GUI message if meld cannot be executed)
 * Fixed problem #616367 ("File not found" dialog after startup)
 * Fixed problem #620650 (buffer overflow in load_fav_apps())
 * Fixed problem #622456 (do not build plugins as shared library objects)
 * Fixed problem with editing options for favourite apps and devices


===================================
gnome-commander 1.2.8.6
---------------

Bug fixes: