@@ -4,6 +4,7 @@ gnome-commander 1.4
 
 Bug fixes:
  * Fixed problem #617140 (GNOME Goal: Use accessor functions instead direct access)
+ * Fixed problem #632064 (bug in in gnome-commander-help.master.po)
  * Fixed Ubuntu problem #117226 (bookmarks unification)
  * Fixed problem with right mouse button selection not being precise
 
